fix: filter items overflow shift

--- a/components/SearchResults/SearchAndFilter/SearchAndFilter/SearchAndFilter.module.scss
+++ b/components/SearchResults/SearchAndFilter/SearchAndFilter/SearchAndFilter.module.scss
@@ -23,8 +23,9 @@
 
 .search {
     display: flex;
-    flex: 1;
+    width: 100%;
     padding: 270px 0 0 0;
+    overflow: hidden;
 
     @media only screen and (min-width: 768px) {
         //display: flex;
@@ -38,8 +39,13 @@
 
     @media only screen and (min-width: 1024px) {
         position: relative;
+        width: 75%;
         flex-direction: column;
         padding: 150px 0 0 0;
+    }
+
+    @media only screen and (min-width: 1200px) {
+        width: 55%;
     }
 }
 
